Fix for Bug 692339

Threshold creation code in the tiffsep1 code was not handled correctly when the dorder was a simple form
that included a repeated shift.